--- a/package.yaml
+++ b/package.yaml
@@ -98,3 +98,24 @@ benchmarks:
     dependencies:
     - criterion
     - hw-json
+
+when:
+- condition: (flag(sse42))
+  ghc-options:
+  - -mbmi2
+- condition: (flag(bmi2)) && (impl(ghc >=8.4.1))
+  ghc-options:
+  - -mbmi2
+  - -msse4.2
+  cpp-options:
+  - -DBMI2_ENABLED
+
+flags:
+  sse42:
+    description: Enable sse4.2 instruction set
+    manual: false
+    default: false
+  bmi2:
+    description: Enable bmi2 instruction set
+    manual: false
+    default: false
