--- a/package.yaml
+++ b/package.yaml
@@ -20,30 +20,30 @@ extra-source-files:
 - corpus/issue-0001.md
 ghc-options: -Wall
 dependencies:
-- base                >= 4 && <5
-- bytestring
-- hw-balancedparens   >= 0.1.0.0
-- hw-bits             >= 0.4.0.0
-- hw-prim             >= 0.4.0.0
-- hw-rankselect       >= 0.8.0.0
-- hw-rankselect-base  >= 0.2.0.0
-- mmap
-- vector
+- base                >= 4          && < 5
+- bytestring          >= 0.10.8     && < 0.11
+- hw-balancedparens   >= 0.2.0.1    && < 0.3
+- hw-bits             >= 0.7.0.2    && < 0.8
+- hw-prim             >= 0.6.2.0    && < 0.7
+- hw-rankselect       >= 0.10       && < 0.11
+- hw-rankselect-base  >= 0.3        && < 0.4
+- mmap                >= 0.5        && < 0.6
+- vector              >= 0.12       && < 0.13
 library:
   source-dirs: src
   ghc-options:
   - -O2
   - -msse4.2
   dependencies:
-  - array
-  - ansi-wl-pprint
-  - attoparsec
-  - containers
-  - dlist
-  - hw-mquery         >= 0.1.0.0
-  - hw-parser         >= 0.1.0.0
-  - text
-  - word8
+  - array             >= 0.5        && < 0.6
+  - ansi-wl-pprint    >= 0.6.8.2    && < 0.7
+  - attoparsec        >= 0.13       && < 0.14
+  - containers        >= 0.5        && < 0.6
+  - dlist             >= 0.8        && < 0.9
+  - hw-mquery         >= 0.1        && < 0.2
+  - hw-parser         >= 0.1        && < 0.2
+  - text              >= 1.2        && < 1.3
+  - word8             >= 0.1        && < 0.2
 executables:
   hw-json-example:
     main: Main.hs
@@ -55,10 +55,10 @@ executables:
     - -O2
     - -msse4.2
     dependencies:
-    - criterion
-    - dlist
+    - criterion         >= 1.4        && < 1.5
+    - dlist             >= 0.8        && < 0.9
     - hw-json
-    - hw-mquery         >= 0.1.0.0
+    - hw-mquery         >= 0.1        && < 0.2
 tests:
   hw-json-test:
     main: Spec.hs
@@ -68,9 +68,9 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - attoparsec
-    - containers
-    - hspec
+    - attoparsec        >= 0.13       && < 0.14
+    - containers        >= 0.5        && < 0.6
+    - hspec             >= 2.5        && < 2.6
     - hw-json
     verbatim:
       build-tool-depends: hspec-discover:hspec-discover
@@ -82,8 +82,8 @@ benchmarks:
     - -O2
     - -msse4.2
     dependencies:
-    - criterion
-    - directory
+    - criterion         >= 1.4        && < 1.5
+    - directory         >= 1.3        && < 1.4
     - hw-json
 
 when:
