--- a/package.yaml
+++ b/package.yaml
@@ -9,6 +9,7 @@ copyright: 2016 John Ky
 license: BSD3
 github: haskell-works/hw-json
 homepage: http://github.com/haskell-works/hw-json#readme
+
 extra-source-files:
 - README.md
 - corpus/5000B.bp
@@ -18,7 +19,9 @@ extra-source-files:
 - corpus/issue-0001.ib
 - corpus/issue-0001.json
 - corpus/issue-0001.md
+
 ghc-options: -Wall
+
 dependencies:
 - base                >= 4          && < 5
 - bytestring          >= 0.10.8     && < 0.11
@@ -29,6 +32,7 @@ dependencies:
 - hw-rankselect-base  >= 0.3        && < 0.4
 - mmap                >= 0.5        && < 0.6
 - vector              >= 0.12       && < 0.13
+
 library:
   source-dirs: src
   ghc-options:
@@ -44,6 +48,7 @@ library:
   - hw-parser         >= 0.1        && < 0.2
   - text              >= 1.2        && < 1.3
   - word8             >= 0.1        && < 0.2
+
 executables:
   hw-json-example:
     main: Main.hs
@@ -55,10 +60,15 @@ executables:
     - -O2
     - -msse4.2
     dependencies:
-    - criterion         >= 1.4        && < 1.5
-    - dlist             >= 0.8        && < 0.9
+    - criterion             >= 1.4        && < 1.5
+    - dlist                 >= 0.8        && < 0.9
     - hw-json
-    - hw-mquery         >= 0.1        && < 0.2
+    - hw-mquery             >= 0.1        && < 0.2
+    - generic-lens          >= 1          && < 1.1
+    - lens                  >= 4          && < 5
+    - optparse-applicative  >= 0.14       && < 0.15
+    - resourcet             >= 1.2        && < 1.3
+
 tests:
   hw-json-test:
     main: Spec.hs
@@ -74,6 +84,7 @@ tests:
     - hw-json
     verbatim:
       build-tool-depends: hspec-discover:hspec-discover
+
 benchmarks:
   bench:
     main: Main.hs
