--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,7 +38,7 @@
       "isTestCommand": true,
       "taskName": "stack test",
       "args": [
-        "echo START_STACK_TEST && cd ${workspaceRoot} && stack test && echo END_STACK_TEST "
+        "echo START_STACK_TEST && cd ${workspaceRoot} && ./run-stack.sh test && echo END_STACK_TEST "
       ],
       "problemMatcher": {
         "owner": "haskell",
