Add simd dependencies

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-12.2
+resolver: lts-12.14
 
 packages:
 - '.'
@@ -7,3 +7,5 @@ extra-package-dbs: []
 
 extra-deps:
 - hw-parser-0.1.0.0
+- hw-rankselect-0.12.0.4
+- hw-simd-0.1.1.2
