--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ dependencies:
 - hw-prim             >= 0.6.2.0    && < 0.7
 - hw-rankselect       >= 0.10       && < 0.13
 - hw-rankselect-base  >= 0.3        && < 0.4
+- hw-simd             >= 0.1.1.2    && < 0.2
 - mmap                >= 0.5        && < 0.6
 - vector              >= 0.12       && < 0.13
 
