--- a/stack.yaml
+++ b/stack.yaml
@@ -6,7 +6,9 @@ packages:
 extra-package-dbs: []
 
 extra-deps:
+- hw-bits-0.7.0.4
 - hw-parser-0.1.0.0
 - hw-prim-0.6.2.20
 - hw-rankselect-0.12.0.4
-- hw-simd-0.1.1.2
+- hw-simd-0.1.1.3
+- hw-streams-0.0.0.8
