--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,13 @@ jobs:
       - image: quay.io/haskell_works/ghc-8.2.2
     <<: *cabalbuild
 
+  ghc-7.10.3:
+    environment:
+      - GHC: "ghc7.10.3"
+    docker:
+      - image: quay.io/haskell_works/ghc-7.10.3
+    <<: *cabalbuild
+
   checked-builds:
     docker:
       - image: quay.io/haskell_works/ghc-8.4.3
@@ -160,11 +167,13 @@ workflows:
       - ghc-8.6.3
       - ghc-8.4.3
       - ghc-8.2.2
+      - ghc-7.10.3
       - checked-builds:
           requires:
             - ghc-8.6.3
             - ghc-8.4.3
             - ghc-8.2.2
+            - ghc-7.10.3
 
   tagged-release:
     jobs:
