--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -145,7 +145,9 @@ test-suite hw-json-test
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       hw-json
-    , hspec           >= 2.5      &&  < 2.6
+    , hedgehog            >= 0.5        && < 0.7
+    , hspec               >= 2.5        && < 2.6
+    , hw-hspec-hedgehog   >= 0.1.0.4    && < 0.2
   if (flag(sse42))
     ghc-options: -mbmi2
   if (flag(bmi2)) && (impl(ghc >=8.4.1))
