Conversion to LightJson.  Part 1: empty lists

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -220,6 +220,7 @@ test-suite hw-json-doctest
   import:               base, config
                       , doctest
                       , doctest-discover
+                      , hw-json
   default-language:     Haskell2010
   type:                 exitcode-stdio-1.0
   ghc-options:          -threaded
